--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <div class="col-md-12 col-sm-12 text-center">
               <div class="contents">
                 <h5 class="script-font wow fadeInUp" data-wow-delay="0.2s">Hi This is</h5>
-                <h2 class="head-title wow fadeInUp" data-wow-delay="0.4s">Aryan Parashar</h2>
+                <h2 class="head-title wow fadeInUp" data-wow-delay="0.4s">Arya Parashar</h2>
                 <p class="script-font wow fadeInUp" id="front-end" data-wow-delay="0.6s">Front-end Web Developer and Designer</p>
                 <ul class="social-icon wow fadeInUp" data-wow-delay="0.8s">
                   <li>
@@ -191,11 +191,11 @@
           <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
             <div class="profile-wrapper wow fadeInRight" data-wow-delay="0.3s">
               <h3>Hello Sir!</h3>
-              <p>I am Aryan and I am a Fresher in this designing and developing field. I have always been someone who has had both a creative and a logical side. When I discovered web design in college, I realized it would be a perfect fit. I may be new in this field and I am not perfect like others but I am sure you will not regret it if you hire me.
+              <p>I am Arya and I am a Fresher in this designing and developing field. I have always been someone who has had both a creative and a logical side. When I discovered web design in college, I realized it would be a perfect fit. I may be new in this field and I am not perfect like others but I am sure you will not regret it if you hire me.
                 I will complete your work with the least cost because the more I work, the more I will become perfect. If you're happy with my work, you'll happily pay as much as you want. <br> <i>*(Friendly student available for weekend, evening and holiday shifts. Considered hardworking, punctual and driven.)*</i></p>
               <div class="about-profile">
                 <ul class="admin-profile">
-                  <li><span class="pro-title"> Name </span> <span class="pro-detail">Aryan Parashar</span></li>
+                  <li><span class="pro-title"> Name </span> <span class="pro-detail">Aryadhiswar Parasara/span></li>
                   <li><span class="pro-title"> Age </span> <span class="pro-detail">18 Years</span></li>
                   <li><span class="pro-title"> Experience </span> <span class="pro-detail">01 Years(Fresher)</span></li>
                   <li><span class="pro-title"> Country </span> <span class="pro-detail">INDIA</span></li>
@@ -205,7 +205,7 @@
                   <li><span class="pro-title"> Freelance </span> <span class="pro-detail">Available</span></li>
                 </ul>
               </div>
-              <a href="https://drive.google.com/file/d/1aZPxeLP00Ep49ynY1GCpQLDkEp46DSkK/view?usp=drivesdk" class="btn btn-common"><i class="fa fa-download" aria-hidden="true"></i> Download Resume</a>
+              <a href="https://drive.google.com/file/d/1ZJLbRv77xq1pLn9xi7UTloIPCaeftzn9/view?usp=sharing" class="btn btn-common"><i class="fa fa-download" aria-hidden="true"></i> Download Resume</a>
               <a href="#contact" class="btn btn-danger"><i class="icon-speech"></i> Contact Me</a>
             </div>
           </div>   
