--- a/index.html
+++ b/index.html
@@ -529,7 +529,8 @@
             <div class="col-md-6 col-lg-6 col-sm-12">
               <div class="contact-block">
                 <h2>Contact Form</h2>
-                <form id="contactForm" action="Contact.php" method="post">
+                <form id="contactform" action="https://formsubmit.io/send/ee048e9e-b3b3-4b3c-90a3-92d827719664" method="POST">
+                  <input name="_redirect" type="hidden" id="name" value="https://bit.ly/aryansportfolio">
                   <div class="row">
                     <div class="col-md-6">
                       <div class="form-group">
@@ -549,9 +550,9 @@
                         <div class="help-block with-errors"></div>
                       </div>
                     </div>
-                    <div class="col-md-12">
+                      <div class="col-md-12">
                       <div class="form-group"> 
-                        <textarea class="form-control" id="message" placeholder="Your Message" rows="5" data-error="Write your message" required></textarea>
+                        <textarea class="form-control" name="comment"  id="comment" placeholder="Your Message" rows="5" data-error="Write your message" required></textarea>
                         <div class="help-block with-errors"></div>
                       </div>
                       <div class="submit-button">
