--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                 </li>
                 <li>
                   <div class="content-text">
-                    <h3 class="line-title">Higher Secondary School - THE DRONACHARYA SCHOOL</h3>
+                    <h3 class="line-title">Higher Secondary School - THE DRONACHARYA <br> SCHOOL</h3>
                     <span>2019 - 2021</span>
                     <p class="line-text">Expenses as material breeding insisted building to in. Continual so distrusts pronounce by unwilling listening. Thing do taste on we manor.</p>
                   </div>
