--- a/index.html
+++ b/index.html
@@ -146,7 +146,8 @@
                     
                     <button type="button" class="collapsible btn btn-common" style="text-align: center;">Get a Free Quote</button>
                     <div style="padding: 0 18px; display: none; overflow: hidden; background-color: transparent;">
-                      <p style="font-family: 'Courier New', Courier, monospace; font-size: 16px;">“Your website is the center of your digital ecosystem, like a brick and mortar location, the experience matters once a customer enters, just as much as the perception they have of you before they walk through the door.” <br> <b style="font-size: 17px;">- Leland Dieno</b> </p>
+                      <p style="font-family: 'Courier New', Courier, monospace; font-size: 16px;">“Your website is the center of your digital ecosystem, like a brick and mortar location, the experience matters once a customer enters, just as much as the perception they have of you before they walk through the door.” 
+                        <b style="font-size: 17px;">- Leland Dieno</b> </p>
                     </div>
                     
                     <script>
@@ -293,7 +294,7 @@
                 </li>
                 <li>
                   <div class="content-text">
-                    <h3 class="line-title">Higher Secondary School - THE DRONACHARYA <br> SCHOOL</h3>
+                    <h3 class="line-title">Higher Secondary School - THE DRONACHARYA SCHOOL</h3>
                     <span>2019 - 2021</span>
                     <p class="line-text">Expenses as material breeding insisted building to in. Continual so distrusts pronounce by unwilling listening. Thing do taste on we manor.</p>
                   </div>
