--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#contact">
-                  <i class="icon-speech" aria-hidden="true"></i> Contact
+                  <i class="icon-speech" aria-hidden="true"></i> 
                 </a>
               </li>
             </ul>
@@ -121,7 +121,7 @@
             <div class="col-md-12 col-sm-12 text-center">
               <div class="contents">
                 <h5 class="script-font wow fadeInUp" data-wow-delay="0.2s">Hi This is</h5>
-                <h2 class="head-title wow fadeInUp" data-wow-delay="0.4s">Arya Parashar</h2>
+                <h2 class="head-title wow fadeInUp" data-wow-delay="0.4s">Aryan Parashar</h2>
                 <p class="script-font wow fadeInUp" id="front-end" data-wow-delay="0.6s">Front-end Web Developer and Designer</p>
                 <ul class="social-icon wow fadeInUp" data-wow-delay="0.8s">
                   <li>
@@ -146,8 +146,7 @@
                     
                     <button type="button" class="collapsible btn btn-common" style="text-align: center;">Get a Free Quote</button>
                     <div style="padding: 0 18px; display: none; overflow: hidden; background-color: transparent;">
-                      <p style="font-family: 'Courier New', Courier, monospace; font-size: 16px;">“Your website is the center of your digital ecosystem, like a brick and mortar location, the experience matters once a customer enters, just as much as the perception they have of you before they walk through the door.” 
-                        <b style="font-size: 17px;">- Leland Dieno</b> </p>
+                      <p style="font-family: 'Courier New', Courier, monospace; font-size: 16px;">“Your website is the center of your digital ecosystem, like a brick and mortar location, the experience matters once a customer enters, just as much as the perception they have of you before they walk through the door.” <br> <b style="font-size: 17px;">- Leland Dieno</b> </p>
                     </div>
                     
                     <script>
@@ -192,11 +191,11 @@
           <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
             <div class="profile-wrapper wow fadeInRight" data-wow-delay="0.3s">
               <h3>Hello Sir!</h3>
-              <p>I am Arya and I am a Fresher in this designing and developing field. I have always been someone who has had both a creative and a logical side. When I discovered web design in college, I realized it would be a perfect fit. I may be new in this field and I am not perfect like others but I am sure you will not regret it if you hire me.
+              <p>I am Aryan and I am a Fresher in this designing and developing field. I have always been someone who has had both a creative and a logical side. When I discovered web design in college, I realized it would be a perfect fit. I may be new in this field and I am not perfect like others but I am sure you will not regret it if you hire me.
                 I will complete your work with the least cost because the more I work, the more I will become perfect. If you're happy with my work, you'll happily pay as much as you want. <br> <i>*(Friendly student available for weekend, evening and holiday shifts. Considered hardworking, punctual and driven.)*</i></p>
               <div class="about-profile">
                 <ul class="admin-profile">
-                  <li><span class="pro-title"> Name </span> <span class="pro-detail">Aryadhiswar Parasara/span></li>
+                  <li><span class="pro-title"> Name </span> <span class="pro-detail">Aryan Parashar</span></li>
                   <li><span class="pro-title"> Age </span> <span class="pro-detail">18 Years</span></li>
                   <li><span class="pro-title"> Experience </span> <span class="pro-detail">01 Years(Fresher)</span></li>
                   <li><span class="pro-title"> Country </span> <span class="pro-detail">INDIA</span></li>
@@ -206,7 +205,7 @@
                   <li><span class="pro-title"> Freelance </span> <span class="pro-detail">Available</span></li>
                 </ul>
               </div>
-              <a href="https://drive.google.com/file/d/1ZJLbRv77xq1pLn9xi7UTloIPCaeftzn9/view?usp=sharing" class="btn btn-common"><i class="fa fa-download" aria-hidden="true"></i> Download Resume</a>
+              <a href="https://drive.google.com/file/d/1aZPxeLP00Ep49ynY1GCpQLDkEp46DSkK/view?usp=drivesdk" class="btn btn-common"><i class="fa fa-download" aria-hidden="true"></i> Download Resume</a>
               <a href="#contact" class="btn btn-danger"><i class="icon-speech"></i> Contact Me</a>
             </div>
           </div>   
@@ -489,7 +488,7 @@
           <div class="col-md-3 col-sm-6 work-counter-widget text-center">
             <div class="counter wow fadeInDown" data-wow-delay="0.3s">
               <div class="icon"><i class="icon-briefcase"></i></div>
-              <div class="counterUp">0</div>
+              <div class="counterUp">00</div>
               <p>Project Working</p>
             </div>
           </div>
@@ -497,7 +496,7 @@
           <div class="col-md-3 col-sm-6 work-counter-widget text-center">
             <div class="counter wow fadeInDown" data-wow-delay="0.6s">
               <div class="icon"><i class="icon-check"></i></div>
-              <div class="counterUp">0</div>
+              <div class="counterUp">00</div>
               <p>Project Done</p>
             </div>
           </div>
@@ -505,7 +504,7 @@
           <div class="col-md-3 col-sm-6 work-counter-widget text-center">
             <div class="counter wow fadeInDown" data-wow-delay="0.9s">
               <div class="icon"><i class="icon-diamond"></i></div>
-              <div class="counterUp">0</div>
+              <div class="counterUp">00</div>
               <p>Awards Received</p>
             </div>
           </div>
@@ -513,7 +512,7 @@
           <div class="col-md-3 col-sm-6 work-counter-widget text-center">
             <div class="counter wow fadeInDown" data-wow-delay="1.2s">
               <div class="icon"><i class="icon-heart"></i></div>
-              <div class="counterUp">0</div>
+              <div class="counterUp">00</div>
               <p>Happy Clients</p>
             </div>
           </div>
@@ -530,6 +529,8 @@
             <div class="col-md-6 col-lg-6 col-sm-12">
               <div class="contact-block">
                 <h2>Contact Form</h2>
+
+                <!-- form begins here -->
                 <form id="contactform" action="https://formsubmit.io/send/ee048e9e-b3b3-4b3c-90a3-92d827719664" method="POST">
                   <input name="_redirect" type="hidden" id="name" value="https://bit.ly/aryansportfolio">
                   <div class="row">
@@ -551,7 +552,7 @@
                         <div class="help-block with-errors"></div>
                       </div>
                     </div>
-                      <div class="col-md-12">
+                    <div class="col-md-12">
                       <div class="form-group"> 
                         <textarea class="form-control" name="comment"  id="comment" placeholder="Your Message" rows="5" data-error="Write your message" required></textarea>
                         <div class="help-block with-errors"></div>
@@ -564,6 +565,9 @@
                     </div>
                   </div>            
                 </form>
+
+<!-- Form ends here -->
+
               </div>
             </div>
             <div class="col-md-6 col-lg-6 col-sm-12">
