--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
                 <h2>Contact Form</h2>
 
                 <!-- form begins here -->
-                <form id="contactform" action="https://formsubmit.io/send/ee048e9e-b3b3-4b3c-90a3-92d827719664" method="POST">
+                <form id="contactform" action="https://formspree.io/f/xpzbqjnw" method="POST">
                   <input name="_redirect" type="hidden" id="name" value="https://bit.ly/aryansportfolio">
                   <div class="row">
                     <div class="col-md-6">
