--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
 
                 <!-- form begins here -->
                 <form id="contactform" action="https://formspree.io/f/xpzbqjnw" method="POST">
-                  <input name="_redirect" type="hidden" id="name" value="https://bit.ly/aryansportfolio">
+                  <input name="_redirect" type="hidden" id="name" value="https://aryanparashar165.github.io/portfolio/thaks.html">
                   <div class="row">
                     <div class="col-md-6">
                       <div class="form-group">
