--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <a class="instagram" href="https://www.instagram.com/a_r_y_a_n146/"><i class="icon-social-instagram"></i></a>
                   </li>
                   <li>
-                    <a class="linkedin" href="https://www.linkedin.com/in/aryan-parashar-68a50822a/"><i class="icon-social-linkedin"></i></a>
+                    <a class="linkedin" href="https://www.linkedin.com/in/aryanparasar/"><i class="icon-social-linkedin"></i></a>
                   </li>
                   <li>
                     <a class="google" href="mailto: aryanparashar165@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a>
@@ -622,7 +622,7 @@
                   <a class="instagram" href="https://www.instagram.com/a_r_y_a_n146/"><i class="icon-social-instagram"></i></a>
                 </li>
                 <li>
-                  <a class="linkedin" href="https://www.linkedin.com/in/aryan-parashar-68a50822a/"><i class="icon-social-linkedin"></i></a>
+                  <a class="linkedin" href="https://www.linkedin.com/in/aryanparasar/"><i class="icon-social-linkedin"></i></a>
                 </li>
                 <li>
                   <a class="google" href="mailto: aryanparashar561@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a>
