--- a/index.html
+++ b/index.html
@@ -244,32 +244,6 @@
               </div>
             </div>
           </div>
-          <!-- Services item -->
-          <!-- <div class="col-md-6 col-lg-3 col-xs-12">
-            <div class="services-item wow fadeInDown" data-wow-delay="0.9s">
-              <div class="icon">
-                <i class="icon-briefcase"></i>
-              </div>
-              <div class="services-content">
-                <h3><a href="#">Business Branding</a></h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse condi.</p>
-              </div>
-            </div>
-          </div> -->
-          <!-- Services item -->
-          <!-- <div class="col-md-6 col-lg-3 col-xs-12">
-            <div class="services-item wow fadeInDown" data-wow-delay="1.2s">
-              <div class="icon">
-                <i class="icon-bubbles"></i>
-              </div>
-              <div class="services-content">
-                <h3><a href="#">Consultancy</a></h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse condi.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div> -->
     </section>
     <!-- Services Section End -->
     </div>
@@ -286,23 +260,23 @@
                 </li>
                 <li>
                   <div class="content-text">
-                    <h3 class="line-title">BCA - Bhawanipatna University</h3>
+                    <h3 class="line-title">BCA - KALAHANDI UNIVERCITY</h3>
                     <span>2021 - Current</span>
-                    <p class="line-text">Expenses as material breeding insisted building to in. Continual so distrusts pronounce by unwilling listening. Thing do taste on we manor.</p>
+                    <p class="line-text">After compleating my higher-secondery education now I'm studying as a BCA student in "KALAHANDI UNIVERCITY", Bhawnipatna</p>
                   </div>
                 </li>
                 <li>
                   <div class="content-text">
                     <h3 class="line-title">Higher Secondary School - THE DRONACHARYA SCHOOL</h3>
                     <span>2019 - 2021</span>
-                    <p class="line-text">Expenses as material breeding insisted building to in. Continual so distrusts pronounce by unwilling listening. Thing do taste on we manor.</p>
+                    <p class="line-text">I compleated my higher-secondery education in 2021 from "THE DRONACHARYA SCHOOL" as a science student.</p>
                   </div>
                 </li>
                 <li>
                   <div class="content-text">
-                    <h3 class="line-title">Secondary School - Shastriji  High School</h3>
+                    <h3 class="line-title">Secondary School - Panchyat  High School</h3>
                     <span>2009 - 2019</span>
-                    <p class="line-text">Expenses as material breeding insisted building to in. Continual so distrusts pronounce by unwilling listening. Thing do taste on we manor.</p>
+                    <p class="line-text">I started my secondary education in 2009 and it ended in 2019. I can say this was the most precious part of my life.</p>
                   </div>
                 </li>
               </ul>
@@ -317,25 +291,10 @@
                 </li>
                 <li>
                   <div class="content-text">
-                    <h3 class="line-title">HubSpot- Front-End Developer</h3>
-                    <span>Jan 2020 - 2021</span>
-                    <p class="line-text">Expenses as material breeding insisted building to in. Continual so distrusts pronounce by unwilling listening. Thing do taste on we manor.</p>
+                    <h3 class="line-title">Fresher</h3>
+                    <p class="line-text">As I haven't graduated yet I don't have any past experience.</p>
                   </div>
                 </li>
-                <!-- <li>
-                  <div class="content-text">
-                    <h3 class="line-title">UX/UI Designer - Samsung</h3>
-                    <span>Nov 2016 - Dec 2017</span>
-                    <p class="line-text">Expenses as material breeding insisted building to in. Continual so distrusts pronounce by unwilling listening. Thing do taste on we manor.</p>
-                  </div>
-                </li>
-                <li>
-                  <div class="content-text">
-                    <h3 class="line-title">Intern UI Designer - UIdeck</h3>
-                    <span>Mar 2015 - Oct 2016</span>
-                    <p class="line-text">Expenses as material breeding insisted building to in. Continual so distrusts pronounce by unwilling listening. Thing do taste on we manor.</p>
-                  </div>
-                </li> -->
               </ul>
             </div>
           </div>
