--- a/index.html
+++ b/index.html
@@ -366,8 +366,14 @@
               </li>
               <li>
                 <div class="content-text">
+                  <h3 class="line-title">IT Consultant - IBM India</h3>
+                  <span>June 2024 - PRESENT</span>
+                  <p class="line-text">As an IT Consultant specializing in SAP Extended Warehouse Management (EWM) at IBM, I manage and optimize complex warehouse operations. My role involves implementing and configuring SAP EWM solutions to streamline distribution, fulfillment, storage, and inventory management processes. I ensure high levels of process and stock transparency, improve space utilization, and enhance overall warehouse efficiency through advanced functionality and integration with supply chain logistics.</p>
+                </div>
+              </li>
+                <div class="content-text">
                   <h3 class="line-title">Full Time Student - KALAHANDI UNIVERCITY</h3>
-                  <span>Dec 2021 - Present</span>
+                  <span>Dec 2021 - June 2024</span>
                   <p class="line-text">Kalahandi University is a state public university in Odisha, India. It has 50 affiliated colleges and offers various courses in science, arts, commerce, education, law, etc. I’m a full-time BCA student here.</p>
                 </div>
               </li>
